# api-tests-example

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  ruff.toml
.github/actions/prepare-environment/: action.yaml
.github/actions/prepare_environment/: action.yaml
.github/workflows/: ci.yaml  main.yaml  prepare_environment.yaml
src/core/: config.py
src/core/assertions/: helper.py
src/core/client/: api_client.py
src/core/fixtures/: auth_token_fixture.py  helpers_fixtures.py
src/core/service/: api_client.py  base_service.py  response_container.py
src/core/service/todoist/: todoist_service.py
src/core/service/todoist/models/: ProjectData.py  ViewStyle.py
src/core/service/todoist/models/create_project/: CreateProjectRequest.py
src/core/service/todoist/models/update_project/: UpdateProjectRequest.py
test/example/: example_test.py
